07_Learn-Kubernetes/simple_practical_projects/02_Spring_PetClinic/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-ns
  labels:
    app: petclinic
    env: dev
