07_Learn-Kubernetes/simple_practical_projects/02_Spring_PetClinic/07_db_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  namespace: petclinic-ns 
  labels:
    tier: db
spec:
  serviceName: "db-headless-svc" # as it required as we use Headless Service
  replicas: 1
  selector:
    matchLabels:
      tier: db
  template:
    metadata:
      name: db-pod
      labels:
        tier: db
    spec:
      containers:
      - name: mysql-db-container
        image: mysql:8.4.5
        imagePullPolicy: IfNotPresent
      
        volumeMounts:
        - name: pod-vol
          mountPath: /var/lib/mysql
      
      volumes:
      - name: pod-vol
        persistentVolumeClaim: 
          claimName: db-pvc
