07_Learn-Kubernetes/simple_practical_projects/02_Spring_PetClinic/11_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: petclinic-ns
  labels:
    tier: app
spec:
  replicas: 3
  selector:
    matchLabels: 
      tier: app
  template:
    metadata:
      labels:
        tier: app
    spec:
      containers:
      - name: petclinic-app-container
        image: springcommunity/spring-petclinic:3.5.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
