07_Learn-Kubernetes/simple_practical_projects/02_Spring_PetClinic/06_db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-headless-svc
  namespace: petclinic-ns
spec:
  clusterIP: None
  selector:
    tier: db
  ports:
  - port: 3306
    targetPort: 3306
