07_Learn-Kubernetes/simple_practical_projects/02_Spring_PetClinic/10_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: petclinic-ns
  labels:
    tier: app
spec:
  type: ClusterIP
  selector: 
    tier: app 
  ports:
  - port: 80
    targetPort: 8080
