07_Learn-Kubernetes/simple_practical_projects/02_Spring_PetClinic/12_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: petclinic-ns
spec:
  ingressClassName: nginx
  rules:
  - host: petclinic.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-svc
            port:
              number: 80
